create the swagger code for the index function
